--- a/sec_summary.tex
+++ b/sec_summary.tex
@@ -2,10 +2,7 @@
 
 \section{Conclusions}
 \label{sec:summary}
-Long-range angular correlations for pairs of charged particles are studied in pp at ${\sqrt{{\textit s}}}=13$~TeV and in p--Pb collisions at $\sqrt{s_\mathrm{NN}} = 5.02$~TeV. Flow coefficients are extracted from long-range correlations ($\Delta\eta > 1.6$) for a broad range of multiplicity event classes using the template  method, which allows one to subtract the enhanced away-side jet fragmentation yields in high-multiplicity events with respect to low-multiplicity events.
-%Verification of the non-flow subtraction, demonstrating the importance of publishing the extracted jet yields (data and theory) together with flow results
-%Testing lower limit of event multiplicity on flow signal both for pp and p--Pb
-%Comparison to different experiment, suggesting a possible apple-to-apple comparison
+Long-range angular correlations for pairs of charged particles are studied in pp at ${\sqrt{{\textit s}}}=13$~TeV and in p--Pb collisions at $\sqrt{s_\mathrm{NN}} = 5.02$~TeV. Flow coefficients are extracted from long-range correlations ($\Delta\eta > 1.6$) for a broad range of multiplicity event classes using the template method, which allows one to subtract the enhanced away-side jet fragmentation yields in high-multiplicity events with respect to low-multiplicity events. The method we used to measure flow coefficients within our kinematic ranges has been verified within a systematic uncertainty range of 1\% for $v_{2}$ and 3--8\% for $v_{3}$. This is due to the different away-side jet peak shapes in high- and low-multiplicity events. However, it is important to check the systematics when analyzing different kinematic ranges, as the effect may not always be negligible.
 These $p_\mathrm{T}$ dependent results are consistent with ATLAS, and $v_n$ becomes larger for higher $p_\mathrm{T}$, and maximum of $v_n$ is reached at $2.5<p_\mathrm{T}<3.0$ GeV/$c$. 
 The measurement of $v_2$ as a function of charged particle multiplicity $N_{\mathrm{ch}}$ in $|\eta|<0.5$ shows a weak multiplicity dependence on $v_2$ both for pp and p--Pb collisions and tends to decrease toward the lower multiplicities. The results in pp collisions reveal a hint of a disappearing $v_2$ signal below $N_{\mathrm{ch}} = 10$. However, the statistical precision of the data is limited, so we cannot definitively exclude the possibility of a complete disappearance of the $v_2$ signal below this threshold. 
 The comparisons to viscous hydrodynamic models show that the magnitudes of $v_2$ and their multiplicity dependence are not described by state-of-art hydrodynamic calculations with two initial state models, especially for low-multiplicity p--Pb and pp collisions. As initial state effects tend to be more important at low multiplicity~\cite{Greif:2017bnr,Moreland:2018gsh}, these results may help to constrain the modeling of the initial state.
